Fixed jlink-based issues when bundling in a modular program